review more pages

--- a/config.tex
+++ b/config.tex
@@ -1,7 +1,7 @@
 %!TEX root = ts.tex
 %%--------------------------------------------------
 %% Version numbers
-\newcommand{\docno}{Dxxxx}
+\newcommand{\docno}{D1890}
 \newcommand{\prevdocno}{Nxxxx}
 \newcommand{\tsver}{201909}
 
