--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@
 \iffalse %% Uncomment for the TS
 The mission of this specification is to make numbers easier to use.
 \else
-The mission of this document is to highlight inconsistencies among different numbers related proposals, provide a possible solution for them, and update the wordings to be more suitable for the LWG,.
+The mission of this document is to highlight inconsistencies among different numbers related proposals, provide a possible solution for them, and update the wordings to be more suitable for the LWG.
 \fi
 
 \rSec1[intro.style]{Style of presentation}
@@ -21,7 +21,7 @@ color.
 
 \addmodif{Wording to be added which is original to this document appears in blue.}
 
-\remmodif{Wording which this document strikes is presented in red with strikethrough.}
+\remmodif{Wording which this document strikes is presented in red with strike-through.}
 
 \begin{modifcommentblock}
 Notes and motivations for change are in brown.
@@ -44,7 +44,7 @@ Follow mathematical behavior where feasible.
 \end{itemize}
 \item Avoid or hide aliasing effects.
 \item Prefer compile-time errors to run-time errors.
-\item Prefer safe defaults to effient defaults.
+\item Prefer safe defaults to efficient defaults.
 \end{itemize}
 
 Provide types that match the taxonomic needs.
@@ -112,9 +112,15 @@ All aspects of the representation are dynamic. Overflow is variables is avoided.
 Types may also be categorized by the size specification, which is generally by the number of bits in the representation or by the number of digits required.
 
 \begin{addedblock}
+
+\begin{modifcommentblock}
+Should we place all the new sections from this document into the [numerics] and adjust the tags accordingly?
+\end{modifcommentblock}
+
+
 \rSec0[intro.operations]{Operations}
 
-The various types will share many operations. To reduce suprise, these operations should have consistent names for consistent purposes.
+The various types will share many operations. To reduce surprise, these operations should have consistent names for consistent purposes.
 
 \begin{libreqtab3}
     {Operations}
