--- a/wideinteger.tex
+++ b/wideinteger.tex
@@ -91,9 +91,9 @@ namespace std {
   common_type_t<wide_integer<Bits, S>, size_t>
     constexpr  operator>>(const wide_integer<Bits, S>& lhs, size_t rhs);
 
-\begin{modifcommentblock}
-The spaceship operator shopuld be used here and in other papers.
-\end{modifcommentblock}
+@\begin{modifcommentblock}
+The spaceship operator should be used here and in other papers.
+\end{modifcommentblock}@
 
   template<size_t Bits, typename S, size_t Bits2, typename S2>
     constexpr bool operator<(const wide_integer<Bits, S>& lhs, const wide_integer<Bits2, S2>& rhs) noexcept;
