quick review of rational

--- a/config.tex
+++ b/config.tex
@@ -1,7 +1,7 @@
 %!TEX root = ts.tex
 %%--------------------------------------------------
 %% Version numbers
-\newcommand{\docno}{D1890}
+\newcommand{\docno}{P1890R0}
 \newcommand{\prevdocno}{Nxxxx}
 \newcommand{\tsver}{201909}
 
