--- a/ts.tex
+++ b/ts.tex
@@ -31,9 +31,9 @@
 \usepackage[T1]{fontenc}
 \usepackage[pdftex, final]{graphicx}
 \usepackage[pdftex,
-            pdftitle={C++ Technical Specification --- Extensions for Numerics},
-            pdfsubject={C++ Technical Specification --- Extensions for Numerics},
-            pdfcreator={Lawrence Crowl},
+            pdftitle={C++ Numerics Work In Progress Issues},
+            pdfsubject={C++ Numerics Work In Progress Issues},
+            pdfcreator={Antony Polukhin},
             bookmarks=true,
             bookmarksnumbered=true,
             pdfpagelabels=true,
