Editorial post-Belfast fixes (refs #10, #11)

--- a/config.tex
+++ b/config.tex
@@ -1,7 +1,7 @@
 %!TEX root = ts.tex
 %%--------------------------------------------------
 %% Version numbers
-\newcommand{\docno}{P1889R0}
+\newcommand{\docno}{D1889R1}
 \newcommand{\prevdocno}{Nxxxx}
 \newcommand{\tsver}{201909}
 
