--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,7 @@
 \iffalse %% Uncomment for the TS
 The mission of this specification is to make numbers easier to use.
 \else
-The mission of this document is to collect different numbers related proposals in one to make it simpler to discover issues and to simplify editors work of porting the papers to \LaTeX (all the \LaTeX sources are awailable at https://github.com/ZaMaZaN4iK/numeric-papers-in-latex.git ).
+The mission of this document is to collect different numbers related proposals in one to make it simpler to discover issues and to simplify editors work of porting the papers to \LaTeX (all the \LaTeX sources are available at https://github.com/ZaMaZaN4iK/numeric-papers-in-latex.git ).
 \fi
 
 \rSec1[intro.style]{Style of presentation}
@@ -105,7 +105,7 @@ Types may also be categorized by the size specification, which is generally by t
 \begin{addedblock}
 \rSec0[intro.operations]{Operations}
 
-The various types will share many operations. To reduce suprise, these operations should have consistent names for consistent purposes.
+The various types will share many operations. To reduce surprise, these operations should have consistent names for consistent purposes.
 
 \begin{libreqtab3}
     {Operations}
@@ -226,7 +226,7 @@ The various types will share many operations. To reduce suprise, these operation
 
 & dif & difference (a\&\~b)
 \\ \rowsep
-    
-\end{libreqtab3}    
+
+\end{libreqtab3}
 
 \end{addedblock}
