--- a/aliases.tex
+++ b/aliases.tex
@@ -4,8 +4,6 @@
 
 Parametric aliases provide a machine-independent mechanism to specify the desired allocation size built-in or extended types.
 
-The following wording changes are relative to N4527.
-
 \rSec1[compliance]{Freestanding implementations}
 
 Add the following entry to table 16.
@@ -25,11 +23,11 @@ Add the following entry to table 16.
     \chdr{description}  &
     \rhdr{header} \\ \capsep
     \endhead
-    
+
     18.4+ & Floating-point types & <cstdfloat>
-    \\ \rowsep     
-    
-\end{libreqtab3} 
+    \\ \rowsep
+
+\end{libreqtab3}
 \end{addedblock}
 
 \rSec1[support.general]{General}
@@ -51,11 +49,11 @@ Add the following entry to table 29.
         \chdr{description}  &
         \rhdr{header} \\ \capsep
         \endhead
-        
+
         18.4+ & Floating-point types & <cstdfloat>
-        \\ \rowsep     
-        
-    \end{libreqtab3} 
+        \\ \rowsep
+
+    \end{libreqtab3}
 \end{addedblock}
 
 \rSec1[cstdint.syn]{Header <cstdint>}
@@ -65,15 +63,15 @@ Add the following entries to the synopsis before paragraph 1.
 \begin{addedblock}
 \begin{codeblock}
 namespace std {
-  template<int bits> alias exact_2int = @\impdefx{}@;
-  template<int bits> alias fast_2int = @\impdefx{}@;
-  template<int bits> alias least_2int = @\impdefx{}@;
-  template<int bits> alias exact_2uint = @\impdefx{}@;
-  template<int bits> alias fast_2uint = @\impdefx{}@;
-  template<int bits> alias least_2uint = @\impdefx{}@;
+  template<int bits> using exact_2int = @\impdefx{}@;
+  template<int bits> using fast_2int = @\impdefx{}@;
+  template<int bits> using least_2int = @\impdefx{}@;
+  template<int bits> using exact_2uint = @\impdefx{}@;
+  template<int bits> using fast_2uint = @\impdefx{}@;
+  template<int bits> using least_2uint = @\impdefx{}@;
 }
-#define MAX_BITS_2INT @\impdefx{}@;
-#define MAX_BITS_2UINT @\impdefx{}@;
+inline constexpr size_t max_bits_2int = @\impdefx{}@;
+inline constexpr size_t max_bits_2uint = @\impdefx{}@;
 \end{codeblock}
 \end{addedblock}
 
@@ -82,55 +80,55 @@ namespace std {
 Add a new section with the following paragraphs.
 
 \begin{addedblock}
-The aliases below are conditionally supported. The macro \tcode{MAX_BITS_2INT} shall give the largest integer size (in bits) supported by the aliases. [Note: All variants support the same sizes. —end note] If these aliases are not supported, the value shall be 0. Any parameter to the alias shall be in the range 1 to \tcode{MAX_BITS_2INT}.
+The aliases below are conditionally supported. The \tcode{max_bits_2int} variable gives the largest integer size (in bits) supported by the aliases. [Note: All variants support the same sizes. —end note] If these aliases are not supported, the value shall be 0. Any parameter to the alias shall be in the range 1 to \tcode{max_bits_2int}.
 
 \begin{itemdecl}
-template<int bits> alias exact_2int    
+template<int bits> using exact_2int
 \end{itemdecl}
 
 \begin{itemdescr}
-The alias \tcode{exact_2int} refers to a built-in signed binary integer type of exactly \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to int in promotion order. The type must represent negative values with two's-complement representation.    
+The alias \tcode{exact_2int} refers to a built-in signed binary integer type of exactly \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to int in promotion order. The type must represent negative values with two's-complement representation.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias fast_2int    
+template<int bits> using fast_2int
 \end{itemdecl}
 
 \begin{itemdescr}
-The alias \tcode{fast_2int} refers to the fastest built-in signed binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to int in promotion order. The type must represent negative values with two's-complement representation.    
-\end{itemdescr} 
+The alias \tcode{fast_2int} refers to the fastest built-in signed binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to int in promotion order. The type must represent negative values with two's-complement representation.
+\end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias least_2int    
+template<int bits> using least_2int
 \end{itemdecl}
 
 \begin{itemdescr}
-The alias \tcode{least_2int} refers to the smallest built-in signed binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to int in promotion order. The type must represent negative values with two's-complement representation.    
-\end{itemdescr} 
+The alias \tcode{least_2int} refers to the smallest built-in signed binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to int in promotion order. The type must represent negative values with two's-complement representation.
+\end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias exact_2uint    
+template<int bits> using exact_2uint
 \end{itemdecl}
 
 \begin{itemdescr}
-The alias \tcode{exact_2uint} refers to a built-in unsigned binary integer type of exactly \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to unsigned int in promotion order.    
-\end{itemdescr} 
+The alias \tcode{exact_2uint} refers to a built-in unsigned binary integer type of exactly \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to unsigned int in promotion order.
+\end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias fast_2uint    
+template<int bits> using fast_2uint
 \end{itemdecl}
 
 \begin{itemdescr}
-The alias \tcode{fast_2uint} refers to the fastest built-in unsigned binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to unsigned int in promotion order.    
-\end{itemdescr} 
+The alias \tcode{fast_2uint} refers to the fastest built-in unsigned binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to unsigned int in promotion order.
+\end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias least_2uint    
+template<int bits> using least_2uint
 \end{itemdecl}
 
 \begin{itemdescr}
-The alias \tcode{least_2uint} refers to the smallest built-in unsigned binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to unsigned int in promotion order.    
-\end{itemdescr}    
+The alias \tcode{least_2uint} refers to the smallest built-in unsigned binary integer type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to unsigned int in promotion order.
+\end{itemdescr}
 \end{addedblock}
 
 \rSec1[cstdfloat]{Floating-point types}
@@ -144,16 +142,16 @@ Add a new section.
 \begin{addedblock}
     \begin{codeblock}
 namespace std {
-  template<int bits> alias exact_2ieeefloat = @\impdefx{}@;
-  template<int bits> alias fast_2ieeefloat = @\impdefx{}@;
-  template<int bits> alias least_2ieeefloat = @\impdefx{}@;
-  template<int bits> alias exact_10ieeefloat = @\impdefx{}@;
-  template<int bits> alias fast_10ieeefloat = @\impdefx{}@;
-  template<int bits> alias least_10ieeefloat = @\impdefx{}@;
+  template<int bits> using exact_2ieeefloat = @\impdefx{}@;
+  template<int bits> using fast_2ieeefloat = @\impdefx{}@;
+  template<int bits> using least_2ieeefloat = @\impdefx{}@;
+  template<int bits> using exact_10ieeefloat = @\impdefx{}@;
+  template<int bits> using fast_10ieeefloat = @\impdefx{}@;
+  template<int bits> using least_10ieeefloat = @\impdefx{}@;
 }
-#define MAX_BITS_2IEEEFLOAT @\impdefx{}@;
-#define MAX_BITS_10IEEEFLOAT @\impdefx{}@;
-    \end{codeblock}    
+inline constexpr size_t max_bits_2ieeefloat = @\impdefx{}@;
+inline constexpr size_t max_bits_10ieeefloat = @\impdefx{}@;
+    \end{codeblock}
 \end{addedblock}
 
 \rSec1[cstdfloat.parametric]{Parametric types}
@@ -161,10 +159,10 @@ namespace std {
 Add a new section with the following paragraphs.
 
 \begin{addedblock}
-The aliases below are conditionally supported. The macro \tcode{MAX_BITS_2IEEEFLOAT} shall give the largest binary floating-point size (in bits) supported by the aliases. [Note: All variants support the same sizes. —end note] If none of these aliases are supported, the value shall be 0. The parameter to the alias shall be in the range 1 to \tcode{MAX_BITS_2IEEEFLOAT}.
+The aliases below are conditionally supported. The \tcode{max_bits_2ieeefloat} variables gives the largest binary floating-point size (in bits) supported by the aliases. [Note: All variants support the same sizes. —end note] If none of these aliases are supported, the value shall be 0. The parameter to the alias shall be in the range 1 to \tcode{max_bits_2ieeefloat}.
 
 \begin{itemdecl}
-template<int bits> alias exact_2ieeefloat
+template<int bits> using exact_2ieeefloat
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -172,7 +170,7 @@ The alias \tcode{exact_2ieeefloat} refers to a built-in binary floating-point ty
 \end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias fast_2ieeefloat
+template<int bits> using fast_2ieeefloat
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -180,17 +178,17 @@ The alias \tcode{fast_2ieeefloat} refers to the fastest built-in binary floating
 \end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias least_2ieeefloat
+template<int bits> using least_2ieeefloat
 \end{itemdecl}
 
 \begin{itemdescr}
 The alias \tcode{least_2ieeefloat} refers to the smallest built-in binary floating-point type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to double in promotion order. The type must use IEEE representation.
 \end{itemdescr}
 
-The aliases below are conditionally supported. The macro \tcode{MAX_BITS_10IEEEFLOAT} shall give the largest decimal floating point size (in bits) supported by the aliases. [Note: All variants support the same sizes. —end note] If none of these aliases are supported, the value shall be 0. The parameter to the alias shall be in the range 1 to \tcode{MAX_BITS_10IEEEFLOAT}.
+The aliases below are conditionally supported. The macro \tcode{max_bits_10ieeefloat} shall give the largest decimal floating point size (in bits) supported by the aliases. [Note: All variants support the same sizes. —end note] If none of these aliases are supported, the value shall be 0. The parameter to the alias shall be in the range 1 to \tcode{max_bits_10ieeefloat}.
 
 \begin{itemdecl}
-template<int bits> alias exact_10ieeefloat
+template<int bits> using exact_10ieeefloat
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -198,7 +196,7 @@ The alias \tcode{exact_10ieeefloat} refers to a built-in decimal floating-point 
 \end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias fast_10ieeefloat
+template<int bits> using fast_10ieeefloat
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -206,10 +204,10 @@ The alias \tcode{fast_10ieeefloat} refers to the fastest built-in decimal floati
 \end{itemdescr}
 
 \begin{itemdecl}
-template<int bits> alias least_10ieeefloat
+template<int bits> using least_10ieeefloat
 \end{itemdecl}
 
 \begin{itemdescr}
 The alias \tcode{least_10ieeefloat} refers to the smallest built-in decimal floating-point type of at least \tcode{bits} bits. If there are two types of the same size, it refers to the type that is closest to double in promotion order. The type must use IEEE representation.
-\end{itemdescr}   
+\end{itemdescr}
 \end{addedblock}
