--- a/featuretest.tex
+++ b/featuretest.tex
@@ -2,14 +2,15 @@
 
 \rSec0[feature.test]{Feature test macros (Informative)}
 
-\pnum
-If an implementation supplies all of the conditionally-supported features specified in \ref{conformance.conditional}, <wide_integer> header in this document shall additionally define the \tcode{__cpp_lib_wide_integer} feature test macro.
-
 \begin{floattable}{Feature-test macro(s)}{tab:info.features}
 {ll}
 \topline
 \lhdr{Macro name} & \rhdr{Value} \\
 \capsep
 \tcode{__cpp_lib_wide_integer}  & \tcode{\tsver}      \\
+\tcode{__cpp_lib_integer}  & \tcode{\tsver}      \\
+\tcode{__cpp_lib_numeric_aliases}  & \tcode{\tsver}      \\
+\tcode{__cpp_lib_numeric_machine_layer}  & \tcode{\tsver}      \\
+\tcode{__cpp_lib_rational}  & \tcode{\tsver}      \\
 \end{floattable}
 
