--- a/machinelayer.tex
+++ b/machinelayer.tex
@@ -11,12 +11,12 @@ The overflow-detecting functions return a boolean true when the operation overfl
 The following functions are available. Within these prototypes \tcode{T} and \tcode{C} are any integer type. However, \tcode{C} is useful only when it does not have values that \tcode{T} has.
 
 \begin{codeblock}
-bool overflow_cvt( C* result, T value );
-bool overflow_neg( T* result, T value );
-bool overflow_lsh( T* product, T multiplicand, int count );
-bool overflow_add( T* summand, T augend, T addend );
-bool overflow_sub( T* difference, T minuend, T subtrahend );
-bool overflow_mul( T* product, T multiplicand, T multiplier );
+constexpr bool overflow_cvt(C* result, T value);
+constexpr bool overflow_neg(T* result, T value);
+constexpr bool overflow_lsh(T* product, T multiplicand, int count);
+constexpr bool overflow_add(T* summand, T augend, T addend);
+constexpr bool overflow_sub(T* difference, T minuend, T subtrahend);
+constexpr bool overflow_mul(T* product, T multiplicand, T multiplier);
 \end{codeblock}
 
 \rSec1[overflow_handling_ops]{Overflow-Handling Operations}
@@ -25,9 +25,9 @@ Overflow-handling operations require an overflow handling mode. We represent the
 
 \begin{codeblock}
 enum class overflow {
-	impossible, undefined, abort, exception,
-	special,
-	saturate, modulo_shifted
+  impossible, undefined, abort, exception,
+  special,
+  saturate, modulo_shifted
 };
 \end{codeblock}
 
@@ -40,77 +40,86 @@ Within the definition of the following functions, we use a defining function, wh
 Many C++ conversions already reduce the range of a value, but they do not provide programmer control of that reduction. We can give programmers control.
 
 \begin{itemdecl}
-template<typename T, typename U> T convert(overflow mode, U value)		
+template<typename T, typename U>
+constexpr T convert(overflow mode, U value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, numeric_limits<T>::min, numeric_limits<T>::max, value)}.	
+\returns \tcode{overflow(mode, numeric_limits<T>::min(), numeric_limits<T>::max(), value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T, typename U> T convert(U value)		
+template<overflow Mode, typename T, typename U>
+constexpr T convert(U value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{convert(mode, value)}.	
+\returns \tcode{convert(Mode, value)}.
 \end{itemdescr}
 
 Being able to specify overflow from a range of values of the same type is also helpful.
 
 \begin{itemdecl}
-template<typename T> T limit(overflow mode, T lower, T upper, T value)		
+template<typename T>
+constexpr T limit(overflow mode, T lower, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, lower, upper, value)}.	
+\returns \tcode{overflow(mode, lower, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit(T lower, T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit(T lower, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit(mode, lower, upper, value)}.	
+\returns \tcode{limit(Mode, lower, upper, value)}.
 \end{itemdescr}
 
 Common arguments can be elided with convenience functions.
 
 \begin{itemdecl}
-template<typename T> T limit_nonnegative(overflow mode, T upper, T value)		
+template<typename T>
+constexpr T limit_nonnegative(overflow mode, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit(mode, 0, upper, value)}.	
+\returns \tcode{limit(mode, 0, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_nonnegative(T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit_nonnegative(T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_nonnegative(mode, upper, value)}.	
+\returns \tcode{limit_nonnegative(Mode, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<typename T> T limit_signed(overflow mode, T upper, T value)		
+template<typename T>
+constexpr T limit_signed(overflow mode, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit(mode, -upper, upper, value)}.	
+\returns \tcode{limit(mode, -upper, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_signed(T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit_signed(T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_signed(mode, upper, value)}.	
+\returns \tcode{limit_signed(Mode, upper, value)}.
 \end{itemdescr}
 
 Two's-complement numbers are a slight variant on the above.
 
 \begin{itemdecl}
-template<typename T> T limit_twoscomp(overflow mode, T upper, T value)		
+template<typename T>
+constexpr T limit_twoscomp(overflow mode, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
@@ -118,79 +127,88 @@ template<typename T> T limit_twoscomp(overflow mode, T upper, T value)
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_twoscomp(T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit_twoscomp(T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_twoscomp(mode, upper, value)}.	
+\returns \tcode{limit_twoscomp(Mode, upper, value)}.
 \end{itemdescr}
 
 For binary representations, we can also specify bits instead. While this specification may seem redundant, it enables faster implementations.
 
 \begin{itemdecl}
-template<typename T> T limit_nonnegative_bits(overflow mode, T upper, T value)		
+template<typename T>
+constexpr T limit_nonnegative_bits(overflow mode, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, 0, $2^{upper}-1$, value)}.	
+\returns \tcode{overflow(mode, 0, $2^{upper}-1$, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_nonnegative_bits(T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit_nonnegative_bits(T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_nonnegative_bits(mode, upper, value)}.	
+\returns \tcode{limit_nonnegative_bits(Mode, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<typename T> T limit_signed_bits(overflow mode, T upper, T value)		
+template<typename T>
+constexpr T limit_signed_bits(overflow mode, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, -($2^{upper}-1$), $2^{upper}-1$, value)}.	
+\returns \tcode{overflow(mode, -($2^{upper}-1$), $2^{upper}-1$, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_signed_bits(T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit_signed_bits(T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_signed_bits(mode, upper, value)}.
+\returns \tcode{limit_signed_bits(Mode, upper, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<typename T> T limit_twoscomp_bits(overflow mode, T upper, T value)		
+template<typename T>
+constexpr T limit_twoscomp_bits(overflow mode, T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, $-2^{upper}$, $2^{upper}-1$, value)}.	
+\returns \tcode{overflow(mode, $-2^{upper}$, $2^{upper}-1$, value)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T limit_twoscomp_bits(T upper, T value)		
+template<overflow Mode, typename T>
+constexpr T limit_twoscomp_bits(T upper, T value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{limit_twoscomp_bits(mode, upper, value)}.	
+\returns \tcode{limit_twoscomp_bits(mode, upper, value)}.
 \end{itemdescr}
 
 Embedding overflow detection within regular operations can lead to enhanced performance. In particular, left shift is a important candidate operation within fixed-point arithmetic.
 
 \begin{itemdecl}
-template<typename T> T scale_up(overflow mode, T value, int count)		
+template<typename T>
+constexpr T scale_up(overflow mode, T value, int count);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(mode, numeric_limits<T>::min, numeric_limits<T>::max, value*$2^{count}$)}.	
+\returns \tcode{overflow(mode, numeric_limits<T>::min(), numeric_limits<T>::max(), value*$2^{count}$)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow mode, typename T> T scale_up(T value, int count)		
+template<overflow Mode, typename T>
+constexpr T scale_up(T value, int count);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{scale_up(mode, value, count)}.	
+\returns \tcode{scale_up(Mode, value, count)}.
 \end{itemdescr}
 
 \rSec1[round_ops]{Rounding Operations}
@@ -199,16 +217,16 @@ We represent the rounding mode in C++ as an enumeration:
 
 \begin{codeblock}
 enum class rounding {
-	all_to_neg_inf, all_to_pos_inf,
-	all_to_zero, all_away_zero,
-	all_to_even, all_to_odd,
-	all_fastest, all_smallest,
-	all_unspecified,
-	tie_to_neg_inf, tie_to_pos_inf,
-	tie_to_zero, tie_away_zero,
-	tie_to_even, tie_to_odd,
-	tie_fastest, tie_smallest,
-	tie_unspecified
+  all_to_neg_inf, all_to_pos_inf,
+  all_to_zero, all_away_zero,
+  all_to_even, all_to_odd,
+  all_fastest, all_smallest,
+  all_unspecified,
+  tie_to_neg_inf, tie_to_pos_inf,
+  tie_to_zero, tie_away_zero,
+  tie_to_even, tie_to_odd,
+  tie_fastest, tie_smallest,
+  tie_unspecified
 };
 \end{codeblock}
 
@@ -224,55 +242,61 @@ Within the definition of the following functions, we use a defining function, wh
 We already have rounding functions for converting floating-point numbers to integers. However, we need a facility that extends to different sizes of floating-point and between other numeric types.
 
 \begin{itemdecl}
-template<typename T, typename U> T convert(rounding mode, U value)		
+template<typename T, typename U>
+constexpr T convert(rounding mode, U value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{round(mode, U)}.	
+\returns \tcode{round(mode, U)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<rounding mode, typename T, typename U> T convert(U value)		
+template<rounding Mode, typename T, typename U>
+constexpr T convert(U value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{round<T>(mode, U)}.	
+\returns \tcode{round<T>(Mode, U)}.
 \end{itemdescr}
 
 A division function has obvious utility.
 
 \begin{itemdecl}
-template<typename T> T divide(rounding mode, T dividend, T divisor)		
+template<typename T>
+constexpr T divide(rounding mode, T dividend, T divisor);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{is round(mode, dividend/divisor)}. Remember that division evaluates as a real number. Obviously, the implementation will use a different strategy, but it must yield the same result.	
+\returns \tcode{is round(mode, dividend/divisor)}. Remember that division evaluates as a real number. Obviously, the implementation will use a different strategy, but it must yield the same result.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<rounding mode, typename T> T divide(T dividend, T divisor)		
+template<rounding Mode, typename T>
+constexpr T divide(T dividend, T divisor);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{divide(mode, dividend, divisor)}.	
+\returns \tcode{divide(Mode, dividend, divisor)}.
 \end{itemdescr}
 
 Division by a power of two has substantial implementation efficiencies, and is used heavily in fixed-point arithmetic as a scaling mechanism. We represent the conjunction of these approaches with a rounding scale down (right shift).
 
 \begin{itemdecl}
-template<typename T> T scale_down(rounding mode, T value, int bits)		
+template<typename T>
+constexpr T scale_down(rounding mode, T value, int bits);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{round(mode, dividend/$2^{bits}$)}.	
+\returns \tcode{round(mode, dividend/$2^{bits}$)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<rounding mode, typename T> T scale_down(T value, int bits)		
+template<rounding mode, typename T>
+constexpr T scale_down(T value, int bits);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{scale_down(mode, dividend, bits)}.	
+\returns \tcode{scale_down(mode, dividend, bits)}.
 \end{itemdescr}
 
 \rSec1[combined_rounding]{Combined Rounding and Overflow Operations}
@@ -282,39 +306,43 @@ Some operations may reasonably both require rounding and require overflow detect
 First and foremost, conversion from floating-point to integer may require handling a floating-point value that has both a finer resolution and a larger range than the integer can handle. The problem generalizes to arbitrary numeric types.
 
 \begin{itemdecl}
-template<typename T, typename U> T convert(overflow omode, rounding rmode, U value)		
+template<typename T, typename U>
+constexpr T convert(overflow omode, rounding rmode, U value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{overflow(omode, numeric_limits<T>::min, numeric_limits<T>::max, round(rmode,value))}.	
+\returns \tcode{overflow(omode, numeric_limits<T>::min(), numeric_limits<T>::max(), round(rmode, value))}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow omode, rounding rmode, typename T, typename U> T convert(U value)		
+template<overflow OMode, rounding RMode, typename T, typename U>
+constexpr T convert(U value);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{convert(omode, rmode; value)}.	
+\returns \tcode{convert(OMode, RMode; value)}.
 \end{itemdescr}
 
 Consider shifting as multiplication by a power of two. It has an analogy in a bidirectional shift, where a positive power is a left shift and a negative power is a right shift.
 
 \begin{itemdecl}
-template<typename T> T scale(overflow omode, rounding rmode, T value, int count)		
+template<typename T>
+constexpr T scale(overflow omode, rounding rmode, T value, int count);
 \end{itemdecl}
 
 \begin{itemdescr}
 \returns \tcode{count < 0
-	? round(rmode,value*$2^{count}$)
-	: overflow(omode, numeric_limits<T>::min, numeric_limits<T>::max, value*$2^{count}$)}.	
+  ? round(rmode,value*$2^{count}$)
+  : overflow(omode, numeric_limits<T>::min(), numeric_limits<T>::max(), value*$2^{count}$)}.
 \end{itemdescr}
 
 \begin{itemdecl}
-template<overflow omode, rounding rmode, typename T> T scale(T value, int count)		
+template<overflow OMode, rounding RMode, typename T>
+constexpr T scale(T value, int count);
 \end{itemdecl}
 
 \begin{itemdescr}
-\returns \tcode{scale(omode, rmode value count)}.	
+\returns \tcode{scale(OMode, RMode value count)}.
 \end{itemdescr}
 
 \rSec1[double_word_ops]{Double-Word Operations}
@@ -335,7 +363,7 @@ We expect programmers to use type names from \tcode{<cstdint>} or the parametric
     \lhdr{name}  &
     \rhdr{description} \\ \capsep
     \endhead
-    
+
 S & signed integer type
 \\ \rowsep
 
@@ -347,8 +375,8 @@ DS & signed integer type that is double the width of the S type
 
 DU unsigned integer type that is double the width of the U type
 \\ \rowsep
-    
-\end{libreqtab3}  
+
+\end{libreqtab3}
 
 We need a mechanism to specify the largest supported type for various combinations of function category and operation category. To that end, we propose macros as follows.
 
@@ -366,9 +394,9 @@ We need a mechanism to specify the largest supported type for various combinatio
     \chdr{result category}  &
     \rhdr{operation category} \\ \capsep
     \endhead
-    
+
 LARGEST_DOUBLE_WIDE_ADD & double-wide & add, add2, sub, sub2
-\\ \rowsep    
+\\ \rowsep
 
 LARGEST_DOUBLE_WIDE_LSH & double-wide & lsh, lshadd
 \\ \rowsep
@@ -395,96 +423,96 @@ LARGEST_SINGLE_WIDE_DIV & single-wide & divn, divw, divnrem, divwrem
 \\ \rowsep
 
 LARGEST_SINGLE_WIDE_ALL & double-wide & the minimum size of the four macros above
-\\ \rowsep 
-    
-\end{libreqtab3} 
+\\ \rowsep
+
+\end{libreqtab3}
 
 We need a mechanism to build and split double-wide types. The lower part of the split is always an unsigned type.
 
 \begin{itemdecl}
-S split_upper( DS value );
-U split_lower( DS value );
-DS wide_build( S upper, U lower );
+constexpr S split_upper(DS value);
+constexpr U split_lower(DS value);
+constexpr DS wide_build(S upper, U lower);
 
-U split_upper( DU value );
-U split_lower( DU value );
-DU wide_build( U upper, U lower );	
+constexpr U split_upper(DU value);
+constexpr U split_lower(DU value);
+constexpr DU wide_build(U upper, U lower);
 \end{itemdecl}
 
 The arithmetic functions with an double-wide result are as follows. This category seems less important than the next category.
 
 \begin{itemdecl}
-DS wide_lsh( S multiplicand, int count );
-DS wide_add( S augend, S addend );
-DS wide_sub( S minuend, S subtrahend );
-DS wide_mul( S multiplicand, S multiplier );
-DS wide_add2( S augend, S addend1, S addend2 );
-DS wide_sub2( S minuend, S subtrahend1, S subtrahend2 );
-DS wide_lshadd( S multiplicand, int count, S addend );
-DS wide_lshsub( S multiplicand, int count, S subtrahend );
-DS wide_muladd( S multiplicand, S multiplier, S addend );
-DS wide_mulsub( S multiplicand, S multiplier, S subtrahend );
-DS wide_muladd2( S multiplicand, S multiplier, S addend1, S addend2 );
-DS wide_mulsub2( S multiplicand, S multiplier, S subtrahend1, S subtrahend2 );
-S wide_divn( DS dividend, S divisor );
-DS wide_divw( DS dividend, S divisor );
-S wide_divnrem( S* remainder, DS dividend, S divisor );
-DS wide_divnrem( S* remainder, DS dividend, S divisor );
+constexpr DS wide_lsh(S multiplicand, int count);
+constexpr DS wide_add(S augend, S addend);
+constexpr DS wide_sub(S minuend, S subtrahend);
+constexpr DS wide_mul(S multiplicand, S multiplier);
+constexpr DS wide_add2(S augend, S addend1, S addend2);
+constexpr DS wide_sub2(S minuend, S subtrahend1, S subtrahend2);
+constexpr DS wide_lshadd(S multiplicand, int count, S addend);
+constexpr DS wide_lshsub(S multiplicand, int count, S subtrahend);
+constexpr DS wide_muladd(S multiplicand, S multiplier, S addend);
+constexpr DS wide_mulsub(S multiplicand, S multiplier, S subtrahend);
+constexpr DS wide_muladd2(S multiplicand, S multiplier, S addend1, S addend2);
+constexpr DS wide_mulsub2(S multiplicand, S multiplier, S subtrahend1, S subtrahend2);
+constexpr S wide_divn(DS dividend, S divisor);
+constexpr DS wide_divw(DS dividend, S divisor);
+constexpr S wide_divnrem(S* remainder, DS dividend, S divisor);
+constexpr DS wide_divwrem(S* remainder, DS dividend, S divisor);
 
-DU wide_lsh( U multiplicand, int count );
-DU wide_add( U augend, U addend );
-DU wide_sub( U minuend, U subtrahend );
-DU wide_mul( U multiplicand, U multiplier );
-DU wide_add2( U augend, U addend1, U addend2 );
-DU wide_sub2( U minuend, U subtrahend1, U subtrahend2 );
-DU wide_lshadd( U multiplicand, int count, U addend );
-DU wide_lshsub( U multiplicand, int count, U subtrahend );
-DU wide_muladd( U multiplicand, U multiplier, U addend );
-DU wide_mulsub( U multiplicand, U multiplier, U subtrahend );
-DU wide_muladd2( U multiplicand, U multiplier, U addend1, U addend2 );
-DU wide_mulsub2( U multiplicand, U multiplier, U subtrahend1, U subtrahend2 );
-U wide_divn( DU dividend, U divisor );
-DU wide_divw( DU dividend, U divisor );
-U wide_divnrem( U* remainder, DU dividend, U divisor );
-DU wide_divnrem( U* remainder, DU dividend, U divisor );		
+constexpr DU wide_lsh(U multiplicand, int count);
+constexpr DU wide_add(U augend, U addend);
+constexpr DU wide_sub(U minuend, U subtrahend);
+constexpr DU wide_mul(U multiplicand, U multiplier);
+constexpr DU wide_add2(U augend, U addend1, U addend2);
+constexpr DU wide_sub2(U minuend, U subtrahend1, U subtrahend2);
+constexpr DU wide_lshadd(U multiplicand, int count, U addend);
+constexpr DU wide_lshsub(U multiplicand, int count, U subtrahend);
+constexpr DU wide_muladd(U multiplicand, U multiplier, U addend);
+constexpr DU wide_mulsub(U multiplicand, U multiplier, U subtrahend);
+constexpr DU wide_muladd2(U multiplicand, U multiplier, U addend1, U addend2);
+constexpr DU wide_mulsub2(U multiplicand, U multiplier, U subtrahend1, U subtrahend2);
+constexpr U wide_divn(DU dividend, U divisor);
+constexpr DU wide_divw(DU dividend, U divisor);
+constexpr U wide_divnrem(U* remainder, DU dividend, U divisor);
+constexpr DU wide_divwrem(U* remainder, DU dividend, U divisor);
 \end{itemdecl}
 
 The arithmetic functions with a split result are as follows. The lower part of the result is always an unsigned type. The lower part is returned through a pointer while the upper part is returned as the function result. The intent is that in loops, the lower part is written once to memory while the upper part is carried between iterations in a local variable.
 
 \begin{itemdecl}
-S split_lsh( U* product, S multiplicand, int count );
-S split_add( U* summand, S augend, S addend );
-S split_sub( U* difference, S minuend, S subtrahend );
-S split_mul( U* product, S multiplicand, S multiplier );
-S split_add2( U* summand, S value1, S addend1, S addend2 );
-S split_sub2( U* difference, S minuend, S subtrahend1, S subtrahend2 );
-S split_lshadd( U* product, S multiplicand, int count, S addend );
-S split_lshsub( U* product, S multiplicand, int count, S subtrahend );
-S split_muladd( U* product, S multiplicand, S addend1, S addend );
-S split_mulsub( U* product, S multiplicand, S subtrahend1, S subtrahend2 );
-S split_muladd2( U* product, S multiplicand, S multiplier, S addend1, S addend2 );
-S split_mulsub2( U* product, S multiplicand, S multiplier, S subtrahend1, S subtrahend2 );
-S split_divn( S dividend_upper, U dividend_lower, S divisor );
-DS split_divw( S dividend_upper, U dividend_lower, S divisor );
-S split_divnrem( S* remainder, S dividend_upper, U dividend_lower, S divisor );
-DS split_divwrem( S* remainder, S dividend_upper, U dividend_lower, S divisor );
+constexpr S split_lsh(U* product, S multiplicand, int count);
+constexpr S split_add(U* summand, S augend, S addend);
+constexpr S split_sub(U* difference, S minuend, S subtrahend);
+constexpr S split_mul(U* product, S multiplicand, S multiplier);
+constexpr S split_add2(U* summand, S value1, S addend1, S addend2);
+constexpr S split_sub2(U* difference, S minuend, S subtrahend1, S subtrahend2);
+constexpr S split_lshadd(U* product, S multiplicand, int count, S addend);
+constexpr S split_lshsub(U* product, S multiplicand, int count, S subtrahend);
+constexpr S split_muladd(U* product, S multiplicand, S addend1, S addend);
+constexpr S split_mulsub(U* product, S multiplicand, S subtrahend1, S subtrahend2);
+constexpr S split_muladd2(U* product, S multiplicand, S multiplier, S addend1, S addend2);
+constexpr S split_mulsub2(U* product, S multiplicand, S multiplier, S subtrahend1, S subtrahend2);
+constexpr S split_divn(S dividend_upper, U dividend_lower, S divisor);
+constexpr DS split_divw(S dividend_upper, U dividend_lower, S divisor);
+constexpr S split_divnrem(S* remainder, S dividend_upper, U dividend_lower, S divisor);
+constexpr DS split_divwrem(S* remainder, S dividend_upper, U dividend_lower, S divisor);
 
-U split_lsh( U* product, U multiplicand, int count );
-U split_add( U* summand, U value1, U addend );
-U split_sub( U* difference, U minuend, U subtrahend );
-U split_mul( U* product, U multiplicand, U multiplier );
-U split_add2( U* summand, U value1, U addend1, U addend2 );
-U split_sub2( U* difference, U minuend, U subtrahend1, U subtrahend2 );
-U split_lshadd( U* product, U multiplicand, int count, U addend );
-U split_lshsub( U* product, U multiplicand, int count, U subtrahend );
-U split_muladd( U* product, U multiplicand, U multiplier, U addend );
-U split_mulsub( U* product, U multiplicand, U multiplier, U subtrahend );
-U split_muladd2( U* product, U multiplicand, U multiplier, U addend1, U addend2 );
-U split_mulsub2( U* product, U multiplicand, U multiplier, U subtrahend1, U subtrahend2 );
-U split_divn( U dividend_upper, U dividend_lower, U divisor );
-DU split_divw( U dividend_upper, U dividend_lower, U divisor );
-U split_divnrem( U* remainder, U dividend_upper, U dividend_lower, U divisor );
-DU split_divwrem( U* remainder, U dividend_upper, U dividend_lower, U divisor );		
+constexpr U split_lsh(U* product, U multiplicand, int count);
+constexpr U split_add(U* summand, U value1, U addend);
+constexpr U split_sub(U* difference, U minuend, U subtrahend);
+constexpr U split_mul(U* product, U multiplicand, U multiplier);
+constexpr U split_add2(U* summand, U value1, U addend1, U addend2);
+constexpr U split_sub2(U* difference, U minuend, U subtrahend1, U subtrahend2);
+constexpr U split_lshadd(U* product, U multiplicand, int count, U addend);
+constexpr U split_lshsub(U* product, U multiplicand, int count, U subtrahend);
+constexpr U split_muladd(U* product, U multiplicand, U multiplier, U addend);
+constexpr U split_mulsub(U* product, U multiplicand, U multiplier, U subtrahend);
+constexpr U split_muladd2(U* product, U multiplicand, U multiplier, U addend1, U addend2);
+constexpr U split_mulsub2(U* product, U multiplicand, U multiplier, U subtrahend1, U subtrahend2);
+constexpr U split_divn(U dividend_upper, U dividend_lower, U divisor);
+constexpr DU split_divw(U dividend_upper, U dividend_lower, U divisor);
+constexpr U split_divnrem(U* remainder, U dividend_upper, U dividend_lower, U divisor);
+constexpr DU split_divwrem(U* remainder, U dividend_upper, U dividend_lower, U divisor);
 \end{itemdecl}
 
 \rSec0[machine_ext_layer]{Machine extension layer}
@@ -498,53 +526,53 @@ A word is the type provided by \tcode{LARGEST_SINGLE_WIDE_ALL} and defined above
 We provide the following operations. These operations are not intended to provide complete multi-word operations, but rather to handle subarrays with uniform operations. Higher-level operations then compose these operations into a complete operation.
 
 \begin{itemdecl}
-U unsigned_subarray_addin_word U* multiplicand, int length, U addend );		
+constexpr U unsigned_subarray_addin_word(U* multiplicand, int length, U addend);
 \end{itemdecl}
 
 \begin{itemdescr}
 \effects Add the word \tcode{addend} to the \tcode{multiplicand} of length \tcode{length}, leaving the result in the \tcode{multiplicand}.
 
-\returns Any carry out from the accumulator.    	
+\returns Any carry out from the accumulator.
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_add_word U* summand, const U* augend, int length, U addend );    
+constexpr U unsigned_subarray_add_word(U* summand, const U* augend, int length, U addend);
 \end{itemdecl}
 
 \begin{itemdescr}
 \effects Add the \tcode{addend} to the \tcode{augend} of length \tcode{length} writing the result to the \tcode{summand}, which is also of length \tcode{length}.
 
-\returns Any carry out from the \tcode{summand}.    
+\returns Any carry out from the \tcode{summand}.
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_mulin_word U* product, int length, U multiplier );    
+constexpr U unsigned_subarray_mulin_word(U* product, int length, U multiplier);
 \end{itemdecl}
 
 \begin{itemdescr}
 \effects Multiply the \tcode{product} of length \tcode{length} by the \tcode{multiplier}, leaving the result in the \tcode{product}.
 
-\returns Any carry out from the \tcode{product}.    
+\returns Any carry out from the \tcode{product}.
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_mul_word U* product, U* multiplicand, int length, U multiplier );    
+constexpr U unsigned_subarray_mul_word(U* product, U* multiplicand, int length, U multiplier);
 \end{itemdecl}
 
 \begin{itemdescr}
 \effects Multiply the \tcode{multiplicand} of length \tcode{length} by the \tcode{multiplier} writing the result to the \tcode{product}, which is also of length \tcode{length}.
 
-\returns Any carry out from the \tcode{product}.    
+\returns Any carry out from the \tcode{product}.
 \end{itemdescr}
 
 \begin{itemdecl}
-U unsigned_subarray_accmul_word U* accumulator, U* multiplicand, int length, U multiplier );    
+constexpr U unsigned_subarray_accmul_word(U* accumulator, U* multiplicand, int length, U multiplier);
 \end{itemdecl}
 
 \begin{itemdescr}
 \effects Multiply the \tcode{multiplicand} of length \tcode{length} by the \tcode{multiplier} adding the result to the \tcode{accumulator}, which is also of length \tcode{length}.
 
-\returns Any carry out from the \tcode{accumulator}.    
+\returns Any carry out from the \tcode{accumulator}.
 \end{itemdescr}
 
 For each of the two add operations above, there is a corresponding subtract operation.
